syntax = "proto3";

import "google/protobuf/empty.proto";

package breakwater;

message bw {
    int32 id = 1;
    int32 requests = 2;
    int32 credits = 3;
}


message BreakwaterRequest {
    int32 id = 1;
    int32 requests = 2;
    int32 credits = 3;
}

message BreakwaterResponse {
    bw breakwater = 1;
}


service Breakwater {
    rpc CreateRequest(BreakwaterRequest) returns (BreakwaterResponse);
}
